# typedconfig

./: .gitignore  README.rst  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: pythonpackage.yml
PyDataConfig.egg-info/: PKG-INFO  SOURCES.txt
dataconfig/: factory.py  helpers.py  parsers.py  transforms.py  types.py  validators.py
dev/: build_debug_virtualenv.bash
doc/: architecture.rst  specification.rst
pydc/: datatypes.py  factory.py  helpers.py  parsers.py  transforms.py  types.py  validators.py
tests/: test_datatypes.py  test_factory.py  test_helpers.py  test_parsers.py
tests/conf/: config.yaml  rules.yaml
tests/parsers/: test_graph.py  test_tree.py
typedconfig/: _types.py  factory.py  helpers.py  parsers.py  validators.py
typedconfig/parsers/: __init__.py  graph.py  tree.py
