[project]
name = "DataConfig"
version = "0.1.dev0"
description = "A type system with data validation for configuration files."
repository = "https://github.com/calliope-project/dataconfig"
keywords = ["data", "configuration", "validation"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only"
]

[dependencies]

[dev-dependencies]

[build-system]
requires = ["setuptools>=42", "setuptools_scm[toml]>=3.4" ]
build-backend = "setuptools.build_meta"

# [tool.setuptools_scm]
# write_to = "sark/version.py"

[tool.pytest]
# not yet supported, see: https://github.com/pytest-dev/pytest/issues/1556

[tool.coverage.run]
# omit = [".."]

# [tool.mypy]
# ignore_missing_imports = "True"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.github
  | \.mypy_cache
  | \.pytest_cache
  | \.vscode
  | _build
  | build
  | dist
  | .*\.egg-info

  # directories without python source files
  | tests/conf
  | tmp
  | htmlcov
)/
'''
